Updated Greek translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-27  Simos Xenitellis  <simos@gnome.org>
+
+	* el.po: Updated translation.
+
 2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* nso.po: Added Northern Sotho translation by
