Hungarian translation updated.
2004-11-28  Laszlo Dvornik  <dvornik@gnome.hu>

	* hu.po: Hungarian translation updated.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-28  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2004-11-27  Simos Xenitellis  <simos@gnome.org>
 
 	* el.po: Updated translation.
