--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-11-30  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-utils.c:
+	- Allow gnome-help: URI scheme (Don Scorgie)
+	- Make external links actually work (Don Scorgie)
+
+	* src/yelp-window.c:
+	- Fix 'Open Link in New Window' (Don Scorgie)
+
+	* stylesheets/toc2html.xsl:
+	- More TOC work
+
 2004-11-29  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
