--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-02  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* configure.in: Added "zu" to ALL_LINGUAS.
+
 2004-11-30  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-utils.c:
