--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-02  Dwayne Bailey  <dwayne@translate.org.za>
+
+	* zu.po: Added Zulu translation by
+	Zuza Software Foundation <info@translate.org.za>.
+
 2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* nso.po: Added Northern Sotho translation by
