Corrections to Zulu translation.
2004-12-03  Dwayne Bailey  <dwayne@translate.org.za>

	* po/zu.po: Corrections to Zulu translation.

--- a/po/zu.po
+++ b/po/zu.po
@@ -507,7 +507,7 @@ msgstr "Ababambisani"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "Colophon"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
