- Got the man pages listed in the TOC
* data/Makefile.am:
* data/man.xml.in:
* data/toc.xml.in:
* po/POTFILES.in:
* po/wa.po:
* src/yelp-toc-pager.c:
* src/yelp-utils.c:
* src/yelp-utils.h:
* stylesheets/toc2html.xsl:
- Got the man pages listed in the TOC

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-12-05  Shaun McCance  <shaunm@gnome.org>
+
+	* data/Makefile.am:
+	* data/man.xml.in:
+	* data/toc.xml.in:
+	* po/POTFILES.in:
+	* po/wa.po:
+	* src/yelp-toc-pager.c:
+	* src/yelp-utils.c:
+	* src/yelp-utils.h:
+	* stylesheets/toc2html.xsl:
+	- Got the man pages listed in the TOC
+
 2004-12-02  Dwayne Bailey  <dwayne@translate.org.za>
 
 	* configure.in: Added "zu" to ALL_LINGUAS.
