--- a/po/wa.po
+++ b/po/wa.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: yelp 0.6.99\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-11-01 02:49-0600\n"
-"PO-Revision-Date: 2003-07-11 10:44+0200\n"
+"PO-Revision-Date: 2004-12-04 21:39-0600\n"
 "Last-Translator: Pablo Saratxaga <pablo@mandrakesoft.com>\n"
 "Language-Team: Walon <linux-wa@chanae.stben.be>\n"
 "MIME-Version: 1.0\n"
@@ -328,7 +328,7 @@ msgstr "Routenes do nawea"
 
 #: src/yelp-man.c:439
 msgid "Hardware Devices"
-msgstr "Éndjins & éndjolreye"
+msgstr "Éndjins &amp; éndjolreye"
 
 #: src/yelp-man.c:444
 msgid "Configuration Files"
