--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Changes in 2.6.5:
+-----------------
+* Fixed a typo
+* Updated translations:
+  zu      (Zuza Software Foundation)
+  nso     (Zuza Software Foundation)
+  da      (Martin Willemoes Hansen)
+
 Changes in 2.6.4:
 -----------------
 * Updated translations:
