--- a/po/zu.po
+++ b/po/zu.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.6-branch\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-16 15:17+0200\n"
+"POT-Creation-Date: 2004-10-11 23:54-0500\n"
 "PO-Revision-Date: 2004-11-27 19:32+0200\n"
 "Last-Translator: Zuza Software Foundation <info@translate.org.za>\n"
 "Language-Team: Zulu <translate-discuss-zu@lists.sourceforge.net>\n"
@@ -386,8 +386,8 @@ msgstr "Isafaka..."
 #: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
-"Translate.org.za <info@translate.org.za>"
-"Kemi Translations <mondeh@webmail.co.za>"
+"Translate.org.za <info@translate.org.za>Kemi Translations <mondeh@webmail.co."
+"za>"
 
 #: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
@@ -664,4 +664,3 @@ msgstr "Thola usizo nge GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Usizo"
-
