- Hooked up reload, at least for DocBook
* src/yelp-db-pager.c:
* src/yelp-pager.c:
* src/yelp-utils.c:
* src/yelp-window.c:
- Hooked up reload, at least for DocBook

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-12-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	* src/yelp-pager.c:
+	* src/yelp-utils.c:
+	* src/yelp-window.c:
+	- Hooked up reload, at least for DocBook
+
 2004-12-05  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-window.c:
