Removed stylesheets/l10n.xml.in Updated Danish translation.
        * POTFILES.in: Removed stylesheets/l10n.xml.in
        * da.po: Updated Danish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-12-13  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* POTFILES.in: Removed stylesheets/l10n.xml.in
+	* da.po: Updated Danish translation.
+
 2004-12-07  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* POTFILES.in: Removed stylesheets/l10n.xml.in
