Updated Canadian English translation.
	* en_CA.po: Updated Canadian English translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-14  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-12-13  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* POTFILES.in: Removed stylesheets/l10n.xml.in
