--- a/po/en_CA.po
+++ b/po/en_CA.po
@@ -8,95 +8,175 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-18 18:50-0500\n"
-"PO-Revision-Date: 2004-11-18 22:18-0400\n"
+"POT-Creation-Date: 2004-12-14 19:00-0500\n"
+"PO-Revision-Date: 2004-12-14 22:18-0400\n"
 "Last-Translator: Adam Weinberger <adamw@gnome.org>\n"
 "Language-Team: Canadian English <adamw@FreeBSD.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: data/toc.xml.in.h:1
-msgid "Applets"
-msgstr "Applets"
-
-#: data/toc.xml.in.h:2 src/yelp-man.c:429
+#: data/man.xml.in.h:1 data/toc.xml.in.h:4
 msgid "Applications"
 msgstr "Applications"
 
-#: data/toc.xml.in.h:3
-msgid "Desktop"
-msgstr "Desktop"
+#: data/man.xml.in.h:2
+msgid "Configuration Files"
+msgstr "Configuration Files"
 
-#: data/toc.xml.in.h:4 src/yelp-man.c:434
+#: data/man.xml.in.h:3
 msgid "Development"
 msgstr "Development"
 
+#: data/man.xml.in.h:4
+msgid "FORTRAN Functions"
+msgstr "FORTRAN Functions"
+
+#: data/man.xml.in.h:5 data/toc.xml.in.h:7
+msgid "Games"
+msgstr "Games"
+
+#: data/man.xml.in.h:6
+msgid "Hardware Devices"
+msgstr "Hardware Devices"
+
+#: data/man.xml.in.h:7
+msgid "Kernel Routines"
+msgstr "Kernel Routines"
+
+#: data/man.xml.in.h:8
+msgid "Library Functions"
+msgstr "Library Functions"
+
+#: data/man.xml.in.h:9 src/yelp-toc-pager.c:779
+msgid "Man Pages"
+msgstr "Man Pages"
+
+#: data/man.xml.in.h:10
+msgid "OpenSSL Applications"
+msgstr "OpenSSL Applications"
+
+#: data/man.xml.in.h:11
+msgid "OpenSSL Configuration"
+msgstr "OpenSSL Configuration"
+
+#: data/man.xml.in.h:12
+msgid "OpenSSL Overviews"
+msgstr "OpenSSL Overviews"
+
+#: data/man.xml.in.h:13
+msgid "Overviews"
+msgstr "Overviews"
+
+#: data/man.xml.in.h:14
+msgid "Perl Functions"
+msgstr "Perl Functions"
+
+#: data/man.xml.in.h:15
+msgid "Qt Functions"
+msgstr "Qt Functions"
+
+#: data/man.xml.in.h:16
+msgid "System Administration"
+msgstr "System Administration"
+
+#: data/man.xml.in.h:17
+msgid "System Calls"
+msgstr "System Calls"
+
+#: data/man.xml.in.h:18
+msgid "Termcap Applications"
+msgstr "Termcap Applications"
+
+#: data/man.xml.in.h:19
+msgid "X11 Applications"
+msgstr "X11 Applications"
+
+#: data/man.xml.in.h:20
+msgid "X11 Configuration"
+msgstr "X11 Configuration"
+
+#: data/man.xml.in.h:21
+msgid "X11 Devices"
+msgstr "X11 Devices"
+
+#: data/man.xml.in.h:22
+msgid "X11 Functions"
+msgstr "X11 Functions"
+
+#: data/man.xml.in.h:23
+msgid "X11 Games"
+msgstr "X11 Games"
+
+#: data/man.xml.in.h:24
+msgid "X11 Overviews"
+msgstr "X11 Overviews"
+
+#: data/toc.xml.in.h:1
+msgid "Accessibility"
+msgstr "Accessibility"
+
+#: data/toc.xml.in.h:2
+msgid "Accessories"
+msgstr "Accessories"
+
+#: data/toc.xml.in.h:3
+msgid "Applets"
+msgstr "Applets"
+
 #: data/toc.xml.in.h:5
-msgid "Development Environments"
-msgstr "Development Environments"
+msgid "Desktop"
+msgstr "Desktop"
 
 #: data/toc.xml.in.h:6
-msgid "Development Tools"
-msgstr "Development Tools"
-
-#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-msgid "Editors"
-msgstr "Editors"
-
-#: data/toc.xml.in.h:8
 msgid "Education Applications"
 msgstr "Educational Applications"
 
-#: data/toc.xml.in.h:9
-msgid "Games and Entertainment"
-msgstr "Games and Entertainment"
+#: data/toc.xml.in.h:8
+msgid "Graphics"
+msgstr "Graphics"
 
-#: data/toc.xml.in.h:10
-msgid "General"
-msgstr "General"
-
-#: data/toc.xml.in.h:11
+#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1058
 msgid "Help Contents"
 msgstr "Help Contents"
 
-#: data/toc.xml.in.h:12
-msgid "Internet Applications"
-msgstr "Internet Applications"
+#: data/toc.xml.in.h:10
+msgid "Internet"
+msgstr "Internet"
 
-#: data/toc.xml.in.h:13
+#: data/toc.xml.in.h:11
 msgid "KDE"
 msgstr "KDE"
 
+#: data/toc.xml.in.h:12
+msgid "Office"
+msgstr "Office"
+
+#: data/toc.xml.in.h:13
+msgid "Other"
+msgstr "Other"
+
 #: data/toc.xml.in.h:14
-msgid "Kernels"
-msgstr "Kernels"
+msgid "Other Documentation"
+msgstr "Other Documentation"
 
 #: data/toc.xml.in.h:15
-msgid "Multimedia Applications"
-msgstr "Multimedia Applications"
+msgid "Programming"
+msgstr "Programming"
 
 #: data/toc.xml.in.h:16
-msgid "Office and Productivity Applications"
-msgstr "Office and Productivity Applications"
+msgid "Scientific"
+msgstr "Scientific"
 
 #: data/toc.xml.in.h:17
-msgid "Scientific Applications"
-msgstr "Scientific Applications"
+msgid "Sound &amp; Video"
+msgstr "Sound &amp; Video"
 
 #: data/toc.xml.in.h:18
-msgid "Securities"
-msgstr "Security"
+msgid "System Tools"
+msgstr "System Tools"
 
 #: data/toc.xml.in.h:19
-msgid "System"
-msgstr "System"
-
-#: data/toc.xml.in.h:20
-msgid "Utilities"
-msgstr "Utilities"
-
-#: data/toc.xml.in.h:21
 msgid "X Applications"
 msgstr "X Applications"
 
@@ -196,7 +276,7 @@ msgstr "_Variable width:"
 msgid "_Wrap around"
 msgstr "_Wrap around"
 
-#: src/GNOME_Yelp.server.in.h:1
+#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:1999
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -204,25 +284,15 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
-#: src/yelp-db-pager.c:502 src/yelp-man-pager.c:299
-msgid "No href attribute found on yelp:document"
-msgstr "No href attribute found on yelp:document"
-
-#: src/yelp-db-pager.c:516 src/yelp-man-pager.c:314
-msgid "Out of memory"
-msgstr "Out of memory"
-
-#: src/yelp-db-pager.c:714 src/yelp-man-pager.c:368
+#: src/yelp-db-pager.c:527
 msgid "Titlepage"
 msgstr "Titlepage"
 
-#: src/yelp-db-pager.c:716 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:529
 msgid "Contents"
 msgstr "Contents"
 
-#: src/yelp-db-pager.c:734 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:388
+#: src/yelp-db-pager.c:547
 msgid "Unknown"
 msgstr "Unknown"
 
@@ -263,70 +333,9 @@ msgstr "Could not activate Yelp: '%s'"
 msgid "Could not open new window."
 msgstr "Could not open new window."
 
-#: src/yelp-main.c:326 yelp.desktop.in.h:2
+#: src/yelp-main.c:326 yelp.desktop.in.in.h:2
 msgid "Help"
 msgstr "Help"
-
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
-msgid "X11"
-msgstr "X11"
-
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
-msgid "OpenSSL"
-msgstr "OpenSSL"
-
-#: src/yelp-man.c:306
-msgid "Termcap"
-msgstr "Termcap"
-
-#: src/yelp-man.c:322
-msgid "Perl"
-msgstr "Perl"
-
-#: src/yelp-man.c:327
-msgid "Qt"
-msgstr "Qt"
-
-#: src/yelp-man.c:337
-msgid "TIFF"
-msgstr "TIFF"
-
-#: src/yelp-man.c:342
-msgid "PThreads"
-msgstr "PThreads"
-
-#: src/yelp-man.c:364
-msgid "System Calls"
-msgstr "System Calls"
-
-#: src/yelp-man.c:369
-msgid "Library Functions"
-msgstr "Library Functions"
-
-#: src/yelp-man.c:374
-msgid "Kernel Routines"
-msgstr "Kernel Routines"
-
-#: src/yelp-man.c:439
-msgid "Hardware Devices"
-msgstr "Hardware Devices"
-
-#: src/yelp-man.c:444
-msgid "Configuration Files"
-msgstr "Configuration Files"
-
-#: src/yelp-man.c:449
-msgid "Games"
-msgstr "Games"
-
-#: src/yelp-man.c:454
-msgid "Overviews"
-msgstr "Overviews"
-
-#: src/yelp-man.c:459
-msgid "System Administration"
-msgstr "System Administration"
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
@@ -336,412 +345,153 @@ msgstr "Document Information"
 msgid "The YelpDocInfo struct of the document"
 msgstr "The YelpDocInfo struct of the document"
 
-#: src/yelp-toc-pager.c:287
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Pause count is negative."
 
-#: src/yelp-toc-pager.c:538
+#: src/yelp-toc-pager.c:490
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "Could not load the OMF file '%s'."
 
-#: src/yelp-toc-pager.c:937
-msgid "Categories"
-msgstr "Categories"
+#: src/yelp-toc-pager.c:681
+#, c-format
+msgid "Read man page for %s"
+msgstr "Read man page for %s"
 
-#: src/yelp-toc-pager.c:951
-msgid "Documents"
-msgstr "Documents"
+#: src/yelp-toc-pager.c:1003
+msgid "No href attribute found on yelp:document"
+msgstr "No href attribute found on yelp:document"
 
-#: src/yelp-window.c:283
+#: src/yelp-toc-pager.c:1017
+msgid "Out of memory"
+msgstr "Out of memory"
+
+#: src/yelp-window.c:297
 msgid "_File"
 msgstr "_File"
 
-#: src/yelp-window.c:284
+#: src/yelp-window.c:298
 msgid "_Edit"
 msgstr "_Edit"
 
-#: src/yelp-window.c:285
+#: src/yelp-window.c:299
 msgid "_Go"
 msgstr "_Go"
 
-#: src/yelp-window.c:286
+#: src/yelp-window.c:300
 msgid "_Help"
 msgstr "_Help"
 
-#: src/yelp-window.c:289
+#: src/yelp-window.c:303
 msgid "_New window"
 msgstr "_New window"
 
-#: src/yelp-window.c:294
+#: src/yelp-window.c:308
 msgid "Open _Location"
 msgstr "Open _Location"
 
-#: src/yelp-window.c:299
+#: src/yelp-window.c:313
 msgid "_Close window"
 msgstr "_Close window"
 
-#: src/yelp-window.c:305
+#: src/yelp-window.c:319
 msgid "_Copy"
 msgstr "_Copy"
 
-#: src/yelp-window.c:311
+#: src/yelp-window.c:325
 msgid "_Select All"
 msgstr "_Select All"
 
-#: src/yelp-window.c:316
+#: src/yelp-window.c:330
 msgid "_Find..."
 msgstr "_Find..."
 
-#: src/yelp-window.c:321
+#: src/yelp-window.c:335
 msgid "_Preferences"
 msgstr "_Preferences"
 
-#: src/yelp-window.c:326
+#: src/yelp-window.c:340
 msgid "_Reload"
 msgstr "_Reload"
 
-#: src/yelp-window.c:332
+#: src/yelp-window.c:346
 msgid "_Back"
 msgstr "_Back"
 
-#: src/yelp-window.c:334
+#: src/yelp-window.c:348
 msgid "Show previous page in history"
 msgstr "Show previous page in history"
 
-#: src/yelp-window.c:337
+#: src/yelp-window.c:351
 msgid "_Forward"
 msgstr "_Forward"
 
-#: src/yelp-window.c:339
+#: src/yelp-window.c:353
 msgid "Show next page in history"
 msgstr "Show next page in history"
 
-#: src/yelp-window.c:342
+#: src/yelp-window.c:356
 msgid "_Home"
 msgstr "_Home"
 
-#: src/yelp-window.c:344
+#: src/yelp-window.c:358
 msgid "Go to home view"
 msgstr "Go to home view"
 
-#: src/yelp-window.c:347
+#: src/yelp-window.c:361
 msgid "_Previous Page"
 msgstr "_Previous Page"
 
-#: src/yelp-window.c:352
+#: src/yelp-window.c:366
 msgid "_Next Page"
 msgstr "_Next Page"
 
-#: src/yelp-window.c:357
+#: src/yelp-window.c:371
 msgid "_Contents"
 msgstr "_Contents"
 
-#: src/yelp-window.c:362
+#: src/yelp-window.c:376
 msgid "_Open Link"
 msgstr "_Open Link"
 
-#: src/yelp-window.c:367
+#: src/yelp-window.c:381
 msgid "Open Link in _New Window"
 msgstr "Open Link in _New Window"
 
-#: src/yelp-window.c:372
+#: src/yelp-window.c:386
 msgid "_Copy Link Address"
 msgstr "_Copy Link Address"
 
-#: src/yelp-window.c:378
+#: src/yelp-window.c:392
 msgid "_About"
 msgstr "_About"
 
-#: src/yelp-window.c:429
+#: src/yelp-window.c:443
 msgid "Help Browser"
 msgstr "Help Browser"
 
-#: src/yelp-window.c:922
+#: src/yelp-window.c:950
 msgid "Fin_d"
 msgstr "Fin_d"
 
-#: src/yelp-window.c:1193
+#: src/yelp-window.c:1230
 msgid "Loading..."
 msgstr "Loading..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1934
-msgid "translator_credits"
+#: src/yelp-window.c:1996
+msgid "translator-credits"
 msgstr ""
 "Maintainer: Adam Weinberger <adamw@gnome.org>\n"
 "Alexander Winston <alexander.winston@comcast.net>"
 
-#: stylesheets/l10n.xml.in.h:1
-msgid "&#8216;"
-msgstr "&#8216;"
-
-#: stylesheets/l10n.xml.in.h:2
-msgid "&#8217;"
-msgstr "&#8217;"
-
-#: stylesheets/l10n.xml.in.h:3
-msgid "&#8220;"
-msgstr "&#8220;"
-
-#: stylesheets/l10n.xml.in.h:4
-msgid "&#8221;"
-msgstr "&#8221;"
-
-#: stylesheets/l10n.xml.in.h:5
-msgid "About This Article"
-msgstr "About This Article"
-
-#: stylesheets/l10n.xml.in.h:6
-msgid "About This Bibliography"
-msgstr "About This Bibliography"
-
-#: stylesheets/l10n.xml.in.h:7
-msgid "About This Book"
-msgstr "About This Book"
-
-#: stylesheets/l10n.xml.in.h:8
-msgid "About This Chapter"
-msgstr "About This Chapter"
-
-#: stylesheets/l10n.xml.in.h:9
-msgid "About This Entry"
-msgstr "About This Entry"
-
-#: stylesheets/l10n.xml.in.h:10
-msgid "About This Glossary"
-msgstr "About This Glossary"
-
-#: stylesheets/l10n.xml.in.h:11
-msgid "About This Index"
-msgstr "About This Index"
-
-#: stylesheets/l10n.xml.in.h:12
-msgid "About This Part"
-msgstr "About This Part"
-
-#: stylesheets/l10n.xml.in.h:13
-msgid "About This Preface"
-msgstr "About This Preface"
-
-#: stylesheets/l10n.xml.in.h:14
-msgid "About This Reference"
-msgstr "About This Reference"
-
-#: stylesheets/l10n.xml.in.h:15
-msgid "About This Section"
-msgstr "About This Section"
-
-#: stylesheets/l10n.xml.in.h:16
-msgid "About This Set"
-msgstr "About This Set"
-
-#: stylesheets/l10n.xml.in.h:17
-msgid "Affiliation"
-msgstr "Affiliation"
-
-#: stylesheets/l10n.xml.in.h:18
-msgid "Appendix"
-msgstr "Appendix"
-
-#: stylesheets/l10n.xml.in.h:19
-msgid "Article"
-msgstr "Article"
-
-#: stylesheets/l10n.xml.in.h:20
-msgid "Audience"
-msgstr "Audience"
-
-#: stylesheets/l10n.xml.in.h:21
-msgid "Author"
-msgstr "Author"
-
-#: stylesheets/l10n.xml.in.h:22
-msgid "Authors"
-msgstr "Authors"
-
-#: stylesheets/l10n.xml.in.h:23
-msgid "Bibliography"
-msgstr "Bibliography"
-
-#: stylesheets/l10n.xml.in.h:24
-msgid "Book"
-msgstr "Book"
-
-#: stylesheets/l10n.xml.in.h:25
-msgid "Caution"
-msgstr "Caution"
-
-#: stylesheets/l10n.xml.in.h:26
-msgid "Chapter"
-msgstr "Chapter"
-
-#: stylesheets/l10n.xml.in.h:27
-msgid "Collaborator"
-msgstr "Collaborator"
-
-#: stylesheets/l10n.xml.in.h:28
-msgid "Collaborators"
-msgstr "Collaborators"
-
-#: stylesheets/l10n.xml.in.h:29
-msgid "Colophon"
-msgstr "Colophon"
-
-#: stylesheets/l10n.xml.in.h:31
-msgid "Copyright"
-msgstr "Copyright"
-
-#: stylesheets/l10n.xml.in.h:32
-msgid "Copyrights"
-msgstr "Copyrights"
-
-#: stylesheets/l10n.xml.in.h:33
-msgid "Date"
-msgstr "Date"
-
-#: stylesheets/l10n.xml.in.h:34
-msgid "Dedication"
-msgstr "Dedication"
-
-#: stylesheets/l10n.xml.in.h:35
-msgid "Editor"
-msgstr "Editor"
-
-#: stylesheets/l10n.xml.in.h:37
-msgid "Email"
-msgstr "Email"
-
-#: stylesheets/l10n.xml.in.h:38
-msgid "Example"
-msgstr "Example"
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Figure"
-msgstr "Figure"
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Glossary"
-msgstr "Glossary"
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Important"
-msgstr "Important"
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Index"
-msgstr "Index"
-
-#: stylesheets/l10n.xml.in.h:43
-msgid "Legal Notice"
-msgstr "Legal Notice"
-
-#: stylesheets/l10n.xml.in.h:44
-msgid "Level"
-msgstr "Level"
-
-#: stylesheets/l10n.xml.in.h:45
-msgid "Message Audience"
-msgstr "Message Audience"
-
-#: stylesheets/l10n.xml.in.h:46
-msgid "Message Level"
-msgstr "Message Level"
-
-#: stylesheets/l10n.xml.in.h:47
-msgid "Message Origin"
-msgstr "Message Origin"
-
-#: stylesheets/l10n.xml.in.h:48
-msgid "Note"
-msgstr "Note"
-
-#: stylesheets/l10n.xml.in.h:49
-msgid "Origin"
-msgstr "Origin"
-
-#: stylesheets/l10n.xml.in.h:50
-msgid "Other Contributor"
-msgstr "Other Contributor"
-
-#: stylesheets/l10n.xml.in.h:51
-msgid "Other Contributors"
-msgstr "Other Contributors"
-
-#: stylesheets/l10n.xml.in.h:52
-msgid "Part"
-msgstr "Part"
-
-#: stylesheets/l10n.xml.in.h:53
-msgid "Preface"
-msgstr "Preface"
-
-#: stylesheets/l10n.xml.in.h:54
-msgid "Publisher"
-msgstr "Publisher"
-
-#: stylesheets/l10n.xml.in.h:55
-msgid "Publishers"
-msgstr "Publishers"
-
-#: stylesheets/l10n.xml.in.h:56
-msgid "Reference"
-msgstr "Reference"
-
-#: stylesheets/l10n.xml.in.h:57
-msgid "Reference Entry"
-msgstr "Reference Entry"
-
-#: stylesheets/l10n.xml.in.h:58
-msgid "Reference Section"
-msgstr "Reference Section"
-
-#: stylesheets/l10n.xml.in.h:59
-msgid "Release Information"
-msgstr "Release Information"
-
-#: stylesheets/l10n.xml.in.h:60
-msgid "Revision History"
-msgstr "Revision History"
-
-#: stylesheets/l10n.xml.in.h:61
-msgid "Section"
-msgstr "Section"
-
-#: stylesheets/l10n.xml.in.h:62
-msgid "See"
-msgstr "See"
-
-#: stylesheets/l10n.xml.in.h:63
-msgid "See Also"
-msgstr "See Also"
-
-#: stylesheets/l10n.xml.in.h:64
-msgid "Set Index"
-msgstr "Set Index"
-
-#: stylesheets/l10n.xml.in.h:65
-msgid "Table"
-msgstr "Table"
-
-#: stylesheets/l10n.xml.in.h:66
-msgid "Table of Contents"
-msgstr "Table of Contents"
-
-#: stylesheets/l10n.xml.in.h:67
-msgid "Tip"
-msgstr "Tip"
-
-#: stylesheets/l10n.xml.in.h:68
-msgid "Title"
-msgstr "Title"
-
-#: stylesheets/l10n.xml.in.h:70
-msgid "Warning"
-msgstr "Warning"
-
-#: yelp.desktop.in.h:1
+#: src/yelp-window.c:2001
+msgid "A documentation browser and viewer for the Gnome Desktop."
+msgstr "A documentation browser and viewer for the Gnome Desktop."
+
+#: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Get help with GNOME"
 
