- Put a11y stuff in Accessibility (duh)
* data/scrollkeeper.xml:
- Put a11y stuff in Accessibility (duh)

* data/ui/yelp-ui.xml:
* data/ui/yelp.glade:
* src/Makefile.am:
* src/yelp-bookmarks.c:
* src/yelp-bookmarks.h:
* src/yelp-base.c:
* src/yelp-utils.h:
* src/yelp-window.c:
* src/yelp-window.h:
- First pass at bookmarks

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2004-12-15  Shaun McCance  <shaunm@gnome.org>
+
+	* data/scrollkeeper.xml:
+	- Put a11y stuff in Accessibility (duh)
+
+	* data/ui/yelp-ui.xml:
+	* data/ui/yelp.glade:
+	* src/Makefile.am:
+	* src/yelp-bookmarks.c:
+	* src/yelp-bookmarks.h:
+	* src/yelp-base.c:
+	* src/yelp-utils.h:
+	* src/yelp-window.c:
+	* src/yelp-window.h:
+	- First pass at bookmarks
+
 2004-12-11  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
