--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-16  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2004-12-15  Pawan Chitrakar  <pawan@nplinux.org>
 	* ne.po: Updated Nepali Translation
 
