Updated Bulgarian translation by Vladimir Petkov <vpetkov@i-space.org>
2004-12-18  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Vladimir Petkov <vpetkov@i-space.org>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
-2004-12-18  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+2004-12-18  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Vladimir Petkov <vpetkov@i-space.org>
+
+2003-12-18  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
 
