--- a/po/cs.po
+++ b/po/cs.po
@@ -9,95 +9,175 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-11-17 04:15+0100\n"
-"PO-Revision-Date: 2004-11-17 11:30+0100\n"
+"POT-Creation-Date: 2004-12-19 04:41+0100\n"
+"PO-Revision-Date: 2004-12-19 13:05+0100\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: data/toc.xml.in.h:1
-msgid "Applets"
-msgstr "Aplety"
-
-#: data/toc.xml.in.h:2 src/yelp-man.c:429
+#: data/man.xml.in.h:1 data/toc.xml.in.h:4
 msgid "Applications"
 msgstr "Aplikace"
 
-#: data/toc.xml.in.h:3
-msgid "Desktop"
-msgstr "Prostředí pracovní plochy"
+#: data/man.xml.in.h:2
+msgid "Configuration Files"
+msgstr "Soubory s nastavením"
 
-#: data/toc.xml.in.h:4 src/yelp-man.c:434
+#: data/man.xml.in.h:3
 msgid "Development"
 msgstr "Vývoj"
 
+#: data/man.xml.in.h:4
+msgid "FORTRAN Functions"
+msgstr "Funkce FORTRANu"
+
+#: data/man.xml.in.h:5 data/toc.xml.in.h:7
+msgid "Games"
+msgstr "Hry"
+
+#: data/man.xml.in.h:6
+msgid "Hardware Devices"
+msgstr "Hardwarová zařízení"
+
+#: data/man.xml.in.h:7
+msgid "Kernel Routines"
+msgstr "Rutiny jádra"
+
+#: data/man.xml.in.h:8
+msgid "Library Functions"
+msgstr "Funkce knihovny"
+
+#: data/man.xml.in.h:9 src/yelp-toc-pager.c:779
+msgid "Man Pages"
+msgstr "Stránky man"
+
+#: data/man.xml.in.h:10
+msgid "OpenSSL Applications"
+msgstr "Aplikace OpenSSL"
+
+#: data/man.xml.in.h:11
+msgid "OpenSSL Configuration"
+msgstr "Nastavení OpenSSL"
+
+#: data/man.xml.in.h:12
+msgid "OpenSSL Overviews"
+msgstr "Přehledy OpenSSL"
+
+#: data/man.xml.in.h:13
+msgid "Overviews"
+msgstr "Přehledy"
+
+#: data/man.xml.in.h:14
+msgid "Perl Functions"
+msgstr "Funkce Perlu"
+
+#: data/man.xml.in.h:15
+msgid "Qt Functions"
+msgstr "Funkce Qt"
+
+#: data/man.xml.in.h:16
+msgid "System Administration"
+msgstr "Správa systému"
+
+#: data/man.xml.in.h:17
+msgid "System Calls"
+msgstr "Systémová volání"
+
+#: data/man.xml.in.h:18
+msgid "Termcap Applications"
+msgstr "Aplikace Termcap"
+
+#: data/man.xml.in.h:19
+msgid "X11 Applications"
+msgstr "Aplikace X11"
+
+#: data/man.xml.in.h:20
+msgid "X11 Configuration"
+msgstr "Nastavení X11"
+
+#: data/man.xml.in.h:21
+msgid "X11 Devices"
+msgstr "Zařízení X11"
+
+#: data/man.xml.in.h:22
+msgid "X11 Functions"
+msgstr "Funkce X11"
+
+#: data/man.xml.in.h:23
+msgid "X11 Games"
+msgstr "Hry X11"
+
+#: data/man.xml.in.h:24
+msgid "X11 Overviews"
+msgstr "Přehledy X11"
+
+#: data/toc.xml.in.h:1
+msgid "Accessibility"
+msgstr "Zpřístupnění"
+
+#: data/toc.xml.in.h:2
+msgid "Accessories"
+msgstr "Příslušenství"
+
+#: data/toc.xml.in.h:3
+msgid "Applets"
+msgstr "Aplety"
+
 #: data/toc.xml.in.h:5
-msgid "Development Environments"
-msgstr "Vývojová prostředí"
+msgid "Desktop"
+msgstr "Prostředí pracovní plochy"
 
 #: data/toc.xml.in.h:6
-msgid "Development Tools"
-msgstr "Vývojové nástroje"
-
-#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-msgid "Editors"
-msgstr "Editory"
-
-#: data/toc.xml.in.h:8
 msgid "Education Applications"
 msgstr "Vzdělávací aplikace"
 
-#: data/toc.xml.in.h:9
-msgid "Games and Entertainment"
-msgstr "Hry a zábava"
+#: data/toc.xml.in.h:8
+msgid "Graphics"
+msgstr "Grafika"
 
-#: data/toc.xml.in.h:10
-msgid "General"
-msgstr "Obecné"
-
-#: data/toc.xml.in.h:11
+#: data/toc.xml.in.h:9 src/yelp-toc-pager.c:1058
 msgid "Help Contents"
 msgstr "Obsah nápovědy"
 
-#: data/toc.xml.in.h:12
-msgid "Internet Applications"
-msgstr "Internetové aplikace"
+#: data/toc.xml.in.h:10
+msgid "Internet"
+msgstr "Internet"
 
-#: data/toc.xml.in.h:13
+#: data/toc.xml.in.h:11
 msgid "KDE"
 msgstr "KDE"
 
+#: data/toc.xml.in.h:12
+msgid "Office"
+msgstr "Kancelář"
+
+#: data/toc.xml.in.h:13
+msgid "Other"
+msgstr "Ostatní"
+
 #: data/toc.xml.in.h:14
-msgid "Kernels"
-msgstr "Jádra"
+msgid "Other Documentation"
+msgstr "Ostatní dokumentace"
 
 #: data/toc.xml.in.h:15
-msgid "Multimedia Applications"
-msgstr "Multimediální aplikace"
+msgid "Programming"
+msgstr "Programování"
 
 #: data/toc.xml.in.h:16
-msgid "Office and Productivity Applications"
-msgstr "Kancelářské aplikace"
+msgid "Scientific"
+msgstr "Vědecké"
 
 #: data/toc.xml.in.h:17
-msgid "Scientific Applications"
-msgstr "Vědecké aplikace"
+msgid "Sound &amp; Video"
+msgstr "Zvuk &amp; Video"
 
 #: data/toc.xml.in.h:18
-msgid "Securities"
-msgstr "Zabezpečení"
+msgid "System Tools"
+msgstr "Systémové nástroje"
 
 #: data/toc.xml.in.h:19
-msgid "System"
-msgstr "Systém"
-
-#: data/toc.xml.in.h:20
-msgid "Utilities"
-msgstr "Nástroje"
-
-#: data/toc.xml.in.h:21
 msgid "X Applications"
 msgstr "Aplikace pro X"
 
@@ -134,16 +214,16 @@ msgid "Use the systems default fonts."
 msgstr "Používat implicitní písma systému."
 
 #: data/ui/yelp.glade.h:1
-msgid "*"
-msgstr "*"
-
-#: data/ui/yelp.glade.h:2
 msgid "<b>Accessibility</b>"
 msgstr "<b>Zpřístupnění</b>"
 
-#: data/ui/yelp.glade.h:3
+#: data/ui/yelp.glade.h:2
 msgid "<b>Fonts</b>"
 msgstr "<b>Písma</b>"
+
+#: data/ui/yelp.glade.h:3
+msgid "Bookmarks"
+msgstr "Záložky"
 
 #: data/ui/yelp.glade.h:4
 msgid "C_ase sensitive"
@@ -197,7 +277,7 @@ msgstr "_Proměnlivá šířka:"
 msgid "_Wrap around"
 msgstr "_Přecházet přes okraj"
 
-#: src/GNOME_Yelp.server.in.h:1
+#: src/GNOME_Yelp.server.in.h:1 src/yelp-window.c:2043
 msgid "Yelp"
 msgstr "Yelp"
 
@@ -205,25 +285,15 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Generátor Yelp"
 
-#: src/yelp-db-pager.c:502 src/yelp-man-pager.c:299
-msgid "No href attribute found on yelp:document"
-msgstr "V yelp:document nenalezen atribut href"
-
-#: src/yelp-db-pager.c:516 src/yelp-man-pager.c:314
-msgid "Out of memory"
-msgstr "Nedostatek paměti"
-
-#: src/yelp-db-pager.c:714 src/yelp-man-pager.c:368
+#: src/yelp-db-pager.c:527
 msgid "Titlepage"
 msgstr "Titulní strana"
 
-#: src/yelp-db-pager.c:716 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:529
 msgid "Contents"
 msgstr "Obsah"
 
-#: src/yelp-db-pager.c:734 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:388
+#: src/yelp-db-pager.c:547
 msgid "Unknown"
 msgstr "Neznámý"
 
@@ -264,70 +334,9 @@ msgstr "Nemohu aktivovat Yelp: '%s'"
 msgid "Could not open new window."
 msgstr "Nemohu otevřít nové okno."
 
-#: src/yelp-main.c:326 yelp.desktop.in.h:2
+#: src/yelp-main.c:326 yelp.desktop.in.in.h:2
 msgid "Help"
 msgstr "Nápověda"
-
-#: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
-#: src/yelp-man.c:401 src/yelp-man.c:412
-msgid "X11"
-msgstr "X11"
-
-#: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
-msgid "OpenSSL"
-msgstr "OpenSSL"
-
-#: src/yelp-man.c:306
-msgid "Termcap"
-msgstr "Termcap"
-
-#: src/yelp-man.c:322
-msgid "Perl"
-msgstr "Perl"
-
-#: src/yelp-man.c:327
-msgid "Qt"
-msgstr "Qt"
-
-#: src/yelp-man.c:337
-msgid "TIFF"
-msgstr "TIFF"
-
-#: src/yelp-man.c:342
-msgid "PThreads"
-msgstr "PThreads"
-
-#: src/yelp-man.c:364
-msgid "System Calls"
-msgstr "Systémová volání"
-
-#: src/yelp-man.c:369
-msgid "Library Functions"
-msgstr "Funkce knihovny"
-
-#: src/yelp-man.c:374
-msgid "Kernel Routines"
-msgstr "Rutiny jádra"
-
-#: src/yelp-man.c:439
-msgid "Hardware Devices"
-msgstr "Hardwarová zařízení"
-
-#: src/yelp-man.c:444
-msgid "Configuration Files"
-msgstr "Soubory s nastavením"
-
-#: src/yelp-man.c:449
-msgid "Games"
-msgstr "Hry"
-
-#: src/yelp-man.c:454
-msgid "Overviews"
-msgstr "Přehledy"
-
-#: src/yelp-man.c:459
-msgid "System Administration"
-msgstr "Správa systému"
 
 #: src/yelp-pager.c:120
 msgid "Document Information"
@@ -337,412 +346,165 @@ msgstr "Informace o dokumentu"
 msgid "The YelpDocInfo struct of the document"
 msgstr "Struktura YelpDocInfo dokumentu"
 
-#: src/yelp-toc-pager.c:287
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Počet stran je záporný."
 
-#: src/yelp-toc-pager.c:538
+#: src/yelp-toc-pager.c:490
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "Nemohu načíst soubor OMF '%s'."
 
-#: src/yelp-toc-pager.c:937
-msgid "Categories"
-msgstr "Kategorie"
+#: src/yelp-toc-pager.c:681
+#, c-format
+msgid "Read man page for %s"
+msgstr "Číst stránku man pro %s"
 
-#: src/yelp-toc-pager.c:951
-msgid "Documents"
-msgstr "Dokumenty"
+#: src/yelp-toc-pager.c:1003
+msgid "No href attribute found on yelp:document"
+msgstr "V yelp:document nenalezen atribut href"
 
-#: src/yelp-window.c:283
+#: src/yelp-toc-pager.c:1017
+msgid "Out of memory"
+msgstr "Nedostatek paměti"
+
+#: src/yelp-window.c:298
 msgid "_File"
 msgstr "_Soubor"
 
-#: src/yelp-window.c:284
+#: src/yelp-window.c:299
 msgid "_Edit"
 msgstr "_Upravit"
 
-#: src/yelp-window.c:285
+#: src/yelp-window.c:300
 msgid "_Go"
 msgstr "Pře_jít"
 
-#: src/yelp-window.c:286
+#: src/yelp-window.c:301
+msgid "_Bookmarks"
+msgstr "_Záložky"
+
+#: src/yelp-window.c:302
 msgid "_Help"
 msgstr "_Nápověda"
 
-#: src/yelp-window.c:289
+#: src/yelp-window.c:305
 msgid "_New window"
 msgstr "_Nové okno"
 
-#: src/yelp-window.c:294
+#: src/yelp-window.c:310
 msgid "Open _Location"
 msgstr "Otevřít _umístění"
 
-#: src/yelp-window.c:299
+#: src/yelp-window.c:315
 msgid "_Close window"
 msgstr "_Zavřít okno"
 
-#: src/yelp-window.c:305
+#: src/yelp-window.c:321
 msgid "_Copy"
 msgstr "_Kopírovat"
 
-#: src/yelp-window.c:311
+#: src/yelp-window.c:327
 msgid "_Select All"
 msgstr "Vybrat vš_e"
 
-#: src/yelp-window.c:316
+#: src/yelp-window.c:332
 msgid "_Find..."
 msgstr "_Hledat..."
 
-#: src/yelp-window.c:321
+#: src/yelp-window.c:337
 msgid "_Preferences"
 msgstr "_Nastavení"
 
-#: src/yelp-window.c:326
+#: src/yelp-window.c:342
 msgid "_Reload"
 msgstr "_Obnovit"
 
-#: src/yelp-window.c:332
+#: src/yelp-window.c:348
 msgid "_Back"
 msgstr "_Zpět"
 
-#: src/yelp-window.c:334
+#: src/yelp-window.c:350
 msgid "Show previous page in history"
 msgstr "Zobrazí předchozí stránku v historii"
 
-#: src/yelp-window.c:337
+#: src/yelp-window.c:353
 msgid "_Forward"
 msgstr "_Vpřed"
 
-#: src/yelp-window.c:339
+#: src/yelp-window.c:355
 msgid "Show next page in history"
 msgstr "Zobrazí následující stránku v historii"
 
-#: src/yelp-window.c:342
+#: src/yelp-window.c:358
 msgid "_Home"
 msgstr "_Domů"
 
-#: src/yelp-window.c:344
+#: src/yelp-window.c:360
 msgid "Go to home view"
 msgstr "Přejde na domovskou stránku"
 
-#: src/yelp-window.c:347
+#: src/yelp-window.c:363
 msgid "_Previous Page"
 msgstr "_Předchozí strana"
 
-#: src/yelp-window.c:352
+#: src/yelp-window.c:368
 msgid "_Next Page"
 msgstr "_Následující strana"
 
-#: src/yelp-window.c:357
+#: src/yelp-window.c:373
 msgid "_Contents"
 msgstr "_Obsah"
 
-#: src/yelp-window.c:362
+#: src/yelp-window.c:379
+msgid "_Add Bookmark"
+msgstr "_Přidat záložku"
+
+#: src/yelp-window.c:384
+msgid "_Edit Bookmarks..."
+msgstr "_Upravit záložky..."
+
+#: src/yelp-window.c:390
 msgid "_Open Link"
 msgstr "_Otevřít odkaz"
 
-#: src/yelp-window.c:367
+#: src/yelp-window.c:395
 msgid "Open Link in _New Window"
 msgstr "Otevřít odkaz v _novém okně"
 
-#: src/yelp-window.c:372
+#: src/yelp-window.c:400
 msgid "_Copy Link Address"
 msgstr "_Kopírovat adresu odkazu"
 
-#: src/yelp-window.c:378
+#: src/yelp-window.c:406
 msgid "_About"
 msgstr "O _aplikaci"
 
-#: src/yelp-window.c:429
+#: src/yelp-window.c:457
 msgid "Help Browser"
 msgstr "Prohlížeč nápovědy"
 
-#: src/yelp-window.c:922
+#: src/yelp-window.c:974
 msgid "Fin_d"
 msgstr "_Hledat"
 
-#: src/yelp-window.c:1193
+#: src/yelp-window.c:1254
 msgid "Loading..."
 msgstr "Načítám..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1934
-msgid "translator_credits"
+#: src/yelp-window.c:2040
+msgid "translator-credits"
 msgstr ""
 "Michal Bukovjan\n"
 "Miloslav Trmač <mitr@volny.cz>"
 
-#: stylesheets/l10n.xml.in.h:1
-msgid "&#8216;"
-msgstr "‘"
-
-#: stylesheets/l10n.xml.in.h:2
-msgid "&#8217;"
-msgstr "’"
-
-#: stylesheets/l10n.xml.in.h:3
-msgid "&#8220;"
-msgstr "„"
-
-#: stylesheets/l10n.xml.in.h:4
-msgid "&#8221;"
-msgstr "”"
-
-#: stylesheets/l10n.xml.in.h:5
-msgid "About This Article"
-msgstr "O tomto článku"
-
-#: stylesheets/l10n.xml.in.h:6
-msgid "About This Bibliography"
-msgstr "O této bibliografii"
-
-#: stylesheets/l10n.xml.in.h:7
-msgid "About This Book"
-msgstr "O této knize"
-
-#: stylesheets/l10n.xml.in.h:8
-msgid "About This Chapter"
-msgstr "O této kapitole"
-
-#: stylesheets/l10n.xml.in.h:9
-msgid "About This Entry"
-msgstr "O této položce"
-
-#: stylesheets/l10n.xml.in.h:10
-msgid "About This Glossary"
-msgstr "O tomto slovníku pojmů"
-
-#: stylesheets/l10n.xml.in.h:11
-msgid "About This Index"
-msgstr "O tomto rejstříku"
-
-#: stylesheets/l10n.xml.in.h:12
-msgid "About This Part"
-msgstr "O této části"
-
-#: stylesheets/l10n.xml.in.h:13
-msgid "About This Preface"
-msgstr "O této předmluvě"
-
-#: stylesheets/l10n.xml.in.h:14
-msgid "About This Reference"
-msgstr "O této příručce"
-
-#: stylesheets/l10n.xml.in.h:15
-msgid "About This Section"
-msgstr "O tomto oddílu"
-
-#: stylesheets/l10n.xml.in.h:16
-msgid "About This Set"
-msgstr "O této sadě"
-
-#: stylesheets/l10n.xml.in.h:17
-msgid "Affiliation"
-msgstr "Přidružení"
-
-#: stylesheets/l10n.xml.in.h:18
-msgid "Appendix"
-msgstr "Příloha"
-
-#: stylesheets/l10n.xml.in.h:19
-msgid "Article"
-msgstr "Článek"
-
-#: stylesheets/l10n.xml.in.h:20
-msgid "Audience"
-msgstr "Adresáti"
-
-#: stylesheets/l10n.xml.in.h:21
-msgid "Author"
-msgstr "Autor"
-
-#: stylesheets/l10n.xml.in.h:22
-msgid "Authors"
-msgstr "Autoři"
-
-#: stylesheets/l10n.xml.in.h:23
-msgid "Bibliography"
-msgstr "Bibliografie"
-
-#: stylesheets/l10n.xml.in.h:24
-msgid "Book"
-msgstr "Kniha"
-
-#: stylesheets/l10n.xml.in.h:25
-msgid "Caution"
-msgstr "Pozor"
-
-#: stylesheets/l10n.xml.in.h:26
-msgid "Chapter"
-msgstr "Kapitola"
-
-#: stylesheets/l10n.xml.in.h:27
-msgid "Collaborator"
-msgstr "Spolupracovník"
-
-#: stylesheets/l10n.xml.in.h:28
-msgid "Collaborators"
-msgstr "Spolupracovníci"
-
-#: stylesheets/l10n.xml.in.h:29
-msgid "Colophon"
-msgstr "Tiráž"
-
-#: stylesheets/l10n.xml.in.h:31
-msgid "Copyright"
-msgstr "Copyright"
-
-#: stylesheets/l10n.xml.in.h:32
-msgid "Copyrights"
-msgstr "Copyright"
-
-#: stylesheets/l10n.xml.in.h:33
-msgid "Date"
-msgstr "Datum"
-
-#: stylesheets/l10n.xml.in.h:34
-msgid "Dedication"
-msgstr "Věnování"
-
-#: stylesheets/l10n.xml.in.h:35
-msgid "Editor"
-msgstr "Redaktor"
-
-#: stylesheets/l10n.xml.in.h:37
-msgid "Email"
-msgstr "E-mail"
-
-#: stylesheets/l10n.xml.in.h:38
-msgid "Example"
-msgstr "Příklad"
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Figure"
-msgstr "Obrázek"
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Glossary"
-msgstr "Slovník pojmů"
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Important"
-msgstr "Důležité"
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Index"
-msgstr "Rejstřík"
-
-#: stylesheets/l10n.xml.in.h:43
-msgid "Legal Notice"
-msgstr "Právní oznámení"
-
-#: stylesheets/l10n.xml.in.h:44
-msgid "Level"
-msgstr "Úroveň"
-
-#: stylesheets/l10n.xml.in.h:45
-msgid "Message Audience"
-msgstr "Adresáti zprávy"
-
-#: stylesheets/l10n.xml.in.h:46
-msgid "Message Level"
-msgstr "Úroveň zprávy"
-
-#: stylesheets/l10n.xml.in.h:47
-msgid "Message Origin"
-msgstr "Původ zprávy"
-
-#: stylesheets/l10n.xml.in.h:48
-msgid "Note"
-msgstr "Poznámka"
-
-#: stylesheets/l10n.xml.in.h:49
-msgid "Origin"
-msgstr "Původ"
-
-#: stylesheets/l10n.xml.in.h:50
-msgid "Other Contributor"
-msgstr "Jiný spolupracovník"
-
-#: stylesheets/l10n.xml.in.h:51
-msgid "Other Contributors"
-msgstr "Jiní spolupracovníci"
-
-#: stylesheets/l10n.xml.in.h:52
-msgid "Part"
-msgstr "Část"
-
-#: stylesheets/l10n.xml.in.h:53
-msgid "Preface"
-msgstr "Předmluva"
-
-#: stylesheets/l10n.xml.in.h:54
-msgid "Publisher"
-msgstr "Vydavatel"
-
-#: stylesheets/l10n.xml.in.h:55
-msgid "Publishers"
-msgstr "Vydavatelé"
-
-#: stylesheets/l10n.xml.in.h:56
-msgid "Reference"
-msgstr "Příručka"
-
-#: stylesheets/l10n.xml.in.h:57
-msgid "Reference Entry"
-msgstr "Položka příručky"
-
-#: stylesheets/l10n.xml.in.h:58
-msgid "Reference Section"
-msgstr "Oddíl příručky"
-
-#: stylesheets/l10n.xml.in.h:59
-msgid "Release Information"
-msgstr "Informace o vydání"
-
-#: stylesheets/l10n.xml.in.h:60
-msgid "Revision History"
-msgstr "Historie změn"
-
-#: stylesheets/l10n.xml.in.h:61
-msgid "Section"
-msgstr "Sekce"
-
-#: stylesheets/l10n.xml.in.h:62
-msgid "See"
-msgstr "Viz"
-
-#: stylesheets/l10n.xml.in.h:63
-msgid "See Also"
-msgstr "Viz také"
-
-#: stylesheets/l10n.xml.in.h:64
-msgid "Set Index"
-msgstr "Skupina indexů"
-
-#: stylesheets/l10n.xml.in.h:65
-msgid "Table"
-msgstr "Tabulka"
-
-#: stylesheets/l10n.xml.in.h:66
-msgid "Table of Contents"
-msgstr "Obsah"
-
-#: stylesheets/l10n.xml.in.h:67
-msgid "Tip"
-msgstr "Tip"
-
-#: stylesheets/l10n.xml.in.h:68
-msgid "Title"
-msgstr "Název"
-
-#: stylesheets/l10n.xml.in.h:70
-msgid "Warning"
-msgstr "Varování"
-
-#: yelp.desktop.in.h:1
+#: src/yelp-window.c:2045
+msgid "A documentation browser and viewer for the Gnome Desktop."
+msgstr "Prohlížeč dokumentace pro prostředí pracovní plochy Gnome."
+
+#: yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Získat nápovědu o GNOME"
 
@@ -771,24 +533,3 @@ msgstr "Získat nápovědu o GNOME"
 #: src/yelp-settings.c:125
 msgid "yelp-watermark-blockquote-201C"
 msgstr "yelp-watermark-blockquote-201E"
-
-#~ msgid "A Help Browser for GNOME"
-#~ msgstr "Prohlížeč nápovědy pro GNOME"
-
-#~ msgid "Document URI"
-#~ msgstr "URI dokumentu"
-
-#~ msgid "The URI of the document to be processed"
-#~ msgstr "URI dokumentu, který zpracovat"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Dokument '%s' neexistuje"
-
-#~ msgid "Could not obtain a GtkStyle."
-#~ msgstr "Nemohu získat GtkStyle."
-
-#~ msgid "Additional documents"
-#~ msgstr "Další dokumenty"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Manuálové stránky"
